<resources>
    <string name="app_name">Cosplay Triple Date</string>
    <string name="newGame">New Game</string>
    <string name="next">NEXT</string>
    <string name="start">START</string>
    <string name="load">LOAD</string>
    <string name="CONTINUE">CONTINUE</string>
    <string name="gallery">GALLERY</string>
    <string name="settings">SETTINGS</string>
    <string name="exit">EXIT</string>
    <string name="log">LOG</string>
    <string name="exitQuestion">Do you really want to exit?</string>
    <string name="saveGame">Do you want to save?</string>
    <string name="messageContinue">Do you want to resume your game?</string>
    <string name="deleteSaveGame">Are you sure you want to delete this save?</string>
    <string name="moveToPatreon">^_^ Move to Patreon?</string>
    <string name="moveToTwitter">^_^ Move to Twitter?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="date">Date:\u0020</string>
    <string name="save1">SAVE 1</string>
    <string name="save2">SAVE 2</string>
    <string name="save3">SAVE 3</string>
    <string name="empty">EMPTY</string>
    <string name="delete1">Delete Save 1</string>
    <string name="delete2">Delete Save 2</string>
    <string name="delete3">Delete Save 3</string>
    <string name="musicVolume">MUSIC VOLUME</string>
    <string name="musicONOFF">MUSIC</string>
    <string name="soundVolume">SOUND VOLUME</string>
    <string name="soundONOFF">SOUND</string>
    <string name="explicitImageONOF">EXPLICIT IMAGES</string>
    <string name="mute">MUTE</string>
    <string name="OFF">OFF</string>
    <string name="gameCompleted">GAME COMPLETED</string>
    <string name="thanksMessage">THANKS FOR PLAYING ^_^</string>
    <string name="chapterComplete">CHAPTER COMPLETE</string>
    <string name="messageGameCompleted">Try a new game and discover a new route!!!</string>
    <string name="chapter">CHAPTER:\u0020</string>
    <string name="tap">Tap to Continue...\u0020\u00BB\u0020</string>
    <string name="nextDraw">\u0020\u00BB\u0020</string>
    <string name="nameGirlLog">\u0020\u2386\u000A</string>
    <string name="you">You\u0020\u2386\u000A</string>
    <string name="system">system</string>
</resources>
