<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/continueConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="40dp"
    android:background="@drawable/border_menu"
    tools:context=".fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtMusicVolume"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.4"
                    android:gravity="center"
                    android:paddingStart="70dp"
                    android:text="@string/musicVolume"
                    android:textAlignment="textStart"
                    android:textColor="@color/activeLoadButton"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat" />

                <SeekBar
                    android:id="@+id/seekBarMusic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:max="100" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:scaleType="fitXY">

                <TextView
                    android:id="@+id/txtMusic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.4"
                    android:gravity="center"
                    android:paddingStart="70dp"
                    android:text="@string/musicONOFF"
                    android:textAlignment="textStart"
                    android:textColor="@color/activeLoadButton"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat" />

                <CheckBox
                    android:id="@+id/checkBoxOffMusic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.2"
                    android:text="@string/mute"
                    android:textColor="@color/activeLoadButton"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtSoundVolume"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.4"
                    android:gravity="center"
                    android:paddingStart="70dp"
                    android:text="@string/soundVolume"
                    android:textAlignment="textStart"
                    android:textColor="@color/activeLoadButton"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat" />

                <SeekBar
                    android:id="@+id/seekBarSound"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:max="100" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtSound"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.4"
                    android:gravity="center"
                    android:paddingStart="70dp"
                    android:text="@string/soundONOFF"
                    android:textAlignment="textStart"
                    android:textColor="@color/activeLoadButton"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat" />

                <CheckBox
                    android:id="@+id/checkBoxOffSound"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.2"
                    android:text="@string/mute"
                    android:textColor="@color/activeLoadButton"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtExplicit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.4"
                    android:gravity="center"
                    android:paddingStart="70dp"
                    android:text="@string/explicitImageONOF"
                    android:textAlignment="textStart"
                    android:textColor="@color/activeLoadButton"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat" />

                <CheckBox
                    android:id="@+id/checkBoxOffExplicit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.2"
                    android:text="@string/OFF"
                    android:textColor="@color/activeLoadButton"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>