<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/continueConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="40dp"
    android:background="@drawable/border_menu"
    tools:context=".fragments.ContinueFragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLoadSave1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="@drawable/button_load"
                android:enabled="false"
                android:text="@string/empty"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnLoadSave2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="@drawable/button_load"
                android:enabled="false"
                android:text="@string/empty"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnLoadSave3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="@drawable/button_load"
                android:enabled="false"
                android:text="@string/empty"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:scaleType="fitXY">

            <Button
                android:id="@+id/btnDeleteLoad1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="@drawable/button_delete"
                android:enabled="false"
                android:text="@string/delete1"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnDeleteLoad2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="@drawable/button_delete"
                android:enabled="false"
                android:text="@string/delete2"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnDeleteLoad3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="@drawable/button_delete"
                android:enabled="false"
                android:text="@string/delete3"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>