<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stageID"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game">

    <LinearLayout
        android:id="@+id/scenario"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingStart="40dp"
        android:paddingTop="20dp"
        android:paddingEnd="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/leftPosition"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="fitXY" />

        <ImageView
            android:id="@+id/centerPosition"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="fitXY" />

        <ImageView
            android:id="@+id/rightPosition"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="fitXY" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerResource"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.50">

            <LinearLayout
                android:id="@+id/containerButtons"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="170dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="170dp"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/btnOption1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_select"
                    android:onClick="clickOption1"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textAllCaps="false"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btnOption2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_select"
                    android:onClick="clickOption2"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textAllCaps="false"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btnOption3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_select"
                    android:onClick="clickOption3"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textAllCaps="false"
                    android:textSize="14sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btnExitGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="@drawable/button_game"
                android:onClick="backToMainMenu"
                android:scaleX="0.9"
                android:scaleY="0.9"
                android:text="@string/exit"
                android:textColor="@color/borderButtonGame"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnLog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="@drawable/button_game"
                android:onClick="openLog"
                android:scaleX="0.9"
                android:scaleY="0.9"
                android:text="@string/log"
                android:textColor="@color/borderButtonGame"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:onClick="clickNext"
            app:layout_constrainedWidth="false">

            <TextView
                android:id="@+id/nameCharacterText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:background="@drawable/border_name"
                android:includeFontPadding="false"
                android:paddingStart="10dp"
                android:paddingTop="3dp"
                android:paddingEnd="10dp"
                android:paddingBottom="2dp"
                android:textColor="@color/characterName"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <believe.cht.fadeintextview.TextView
                android:id="@+id/textBox"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/border_menu"
                android:includeFontPadding="true"
                android:paddingStart="64dp"
                android:paddingTop="10dp"
                android:paddingEnd="64dp"
                android:paddingBottom="10dp"
                android:textAlignment="viewStart"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameCharacterText"
                app:letterDuration="25" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerEndStage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="90dp"
        android:background="@drawable/log_border"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/finalMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chapterComplete"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/btnSave2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnSave1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_load"
            android:onClick="save1"
            android:text="@string/save1"
            android:textAllCaps="false"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/btnSave2"
            app:layout_constraintEnd_toStartOf="@+id/btnSave2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnSave2" />

        <Button
            android:id="@+id/btnSave2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_load"
            android:onClick="save2"
            android:text="@string/save2"
            android:textAllCaps="false"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/btnContinue"
            app:layout_constraintEnd_toStartOf="@+id/btnSave3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnSave1"
            app:layout_constraintTop_toBottomOf="@+id/finalMessage" />

        <Button
            android:id="@+id/btnSave3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_load"
            android:onClick="save3"
            android:text="@string/save3"
            android:textAllCaps="false"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/btnSave2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnSave2"
            app:layout_constraintTop_toTopOf="@+id/btnSave2" />

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_load"
            android:onClick="continueGame"
            android:text="@string/CONTINUE"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btnSave3"
            app:layout_constraintStart_toStartOf="@+id/btnSave1"
            app:layout_constraintTop_toBottomOf="@+id/btnSave2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerDialog"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="50dp"
        android:background="@drawable/log_border"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/scenario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scenario">

    <ListView
        android:id="@+id/textBoxLog"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>